tests/snapshots/pysnaptest__test_snapshots_test_assert_snapshot_multiple_1@pysnap.snap
---
source: src/lib.rs
description: "Test File Path: tests/test_snapshots.py"
---
"expected_result_1"
