tests/snapshots/pysnaptest__test_snapshots_test_mock_or_json_snapshot_call_fn-request@pysnap.snap
---
source: src/lib.rs
description: "Test File Path: tests/test_snapshots.py"
---
{
  "args": [
    1
  ],
  "kwargs": {
    "y": 2
  }
}
