tests/snapshots/pysnaptest__test_snapshots_test_mock_or_json_snapshot_call_fn@pysnap.snap
---
source: src/lib.rs
description: "Test File Path: tests/test_snapshots.py"
---
{
  "sum": 3,
  "x": 1,
  "y": 2
}
