tests/snapshots/pysnaptest__test_snapshots_test_mock_or_json_snapshot_diff_args_call_fn-2@pysnap.snap
---
source: src/lib.rs
description: "Test File Path: tests/test_snapshots.py"
---
{
  "sum": 4,
  "x": 1,
  "y": 3
}
