tests/snapshots/pysnaptest__test_snapshots_test_save_snapshot_path_in_advance@pysnap.snap
---
source: src/lib.rs
description: "Test File Path: tests/test_snapshots.py"
---
expected_result_1
