tests/snapshots/pysnaptest__test_snapshots_test_snapshot_sorted_redactions@pysnap.snap
---
source: src/lib.rs
description: "Test File Path: tests/test_snapshots.py"
---
{
  "test": [
    1,
    2,
    4
  ]
}
